@@ -17,7 +17,7 @@
 ----
 
 * Периодический перезапрос авторизации на открытых персистентных сессиях
-
+* Подумать как отдавать метадату с временем текущего сегмента
 
 Архив
 -----
