@@ -90,4 +90,8 @@
   display: none;
 }
 
+.stats-separator {
+  margin-top: 20px;
+  margin-bottom: 25px;
+}
 
